--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
           <div class="containerHeader__burgerIcon" id="burgerButton">
             <img
-              src="./src/assets/header/buttonHeader.png"
+              src="https://res.cloudinary.com/da4pzol89/image/upload/v1675253921/samples/buttonheader_nogv5x.png"
               alt="button header"
             />
           </div>
@@ -233,6 +233,8 @@
           </ul>
         </section>
 
+      
+
         <div class="containarPlans" id="planos">
           <h2>Nossos Planos</h2>
           <div class="containarPlans__items desktop">
@@ -261,6 +263,7 @@
 
                   <p>1 Tela</p>
                 </div>
+
                 <div class="containerBenefits">
                   <svg
                     width="25"
@@ -446,7 +449,20 @@
                 <p class="oldValue">R$120</p>
                 <p>R$60</p>
 
-                <a href="" class="containarPlans__button"> Assinar </a>
+                <a href="" class="containarPlans__button">
+                  Assinar
+                  <svg
+                    width="29"
+                    height="28"
+                    viewBox="0 0 29 28"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M21.4066 7.72333C21.2882 7.43826 21.0617 7.21172 20.7766 7.09333C20.6363 7.03355 20.4857 7.00184 20.3333 7H8.6666C8.35718 7 8.06043 7.12292 7.84164 7.34171C7.62285 7.5605 7.49993 7.85725 7.49993 8.16667C7.49993 8.47609 7.62285 8.77283 7.84164 8.99162C8.06043 9.21042 8.35718 9.33333 8.6666 9.33333H17.5216L7.83826 19.005C7.72891 19.1135 7.64212 19.2425 7.58289 19.3847C7.52366 19.5268 7.49316 19.6793 7.49316 19.8333C7.49316 19.9873 7.52366 20.1398 7.58289 20.282C7.64212 20.4242 7.72891 20.5532 7.83826 20.6617C7.94672 20.771 8.07575 20.8578 8.21792 20.917C8.36009 20.9763 8.51258 21.0068 8.6666 21.0068C8.82061 21.0068 8.9731 20.9763 9.11527 20.917C9.25744 20.8578 9.38647 20.771 9.49493 20.6617L19.1666 10.9783V19.8333C19.1666 20.1428 19.2895 20.4395 19.5083 20.6583C19.7271 20.8771 20.0238 21 20.3333 21C20.6427 21 20.9394 20.8771 21.1582 20.6583C21.377 20.4395 21.4999 20.1428 21.4999 19.8333V8.16667C21.4981 8.01421 21.4664 7.86359 21.4066 7.72333V7.72333Z"
+                      fill="currentColor"
+                    ></path></svg
+                ></a>
               </div>
               <div class="containerBenefits__list">
                 <div class="containerBenefits">
@@ -1468,7 +1484,18 @@
             <h2>MXQ PRO 4K</h2>
             <p>R$ 280,00</p>
 
-            <a href="#" class="containarPlans__button">Comprar</a>
+            <a href="#" class="containarPlans__button">Comprar <svg
+              width="29"
+              height="28"
+              viewBox="0 0 29 28"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M21.4066 7.72333C21.2882 7.43826 21.0617 7.21172 20.7766 7.09333C20.6363 7.03355 20.4857 7.00184 20.3333 7H8.6666C8.35718 7 8.06043 7.12292 7.84164 7.34171C7.62285 7.5605 7.49993 7.85725 7.49993 8.16667C7.49993 8.47609 7.62285 8.77283 7.84164 8.99162C8.06043 9.21042 8.35718 9.33333 8.6666 9.33333H17.5216L7.83826 19.005C7.72891 19.1135 7.64212 19.2425 7.58289 19.3847C7.52366 19.5268 7.49316 19.6793 7.49316 19.8333C7.49316 19.9873 7.52366 20.1398 7.58289 20.282C7.64212 20.4242 7.72891 20.5532 7.83826 20.6617C7.94672 20.771 8.07575 20.8578 8.21792 20.917C8.36009 20.9763 8.51258 21.0068 8.6666 21.0068C8.82061 21.0068 8.9731 20.9763 9.11527 20.917C9.25744 20.8578 9.38647 20.771 9.49493 20.6617L19.1666 10.9783V19.8333C19.1666 20.1428 19.2895 20.4395 19.5083 20.6583C19.7271 20.8771 20.0238 21 20.3333 21C20.6427 21 20.9394 20.8771 21.1582 20.6583C21.377 20.4395 21.4999 20.1428 21.4999 19.8333V8.16667C21.4981 8.01421 21.4664 7.86359 21.4066 7.72333V7.72333Z"
+                fill="currentColor"
+              ></path>
+            </svg></a>
           </div>
           <img
             src="./src/assets/containerInfo/tv-box.png"
@@ -2201,133 +2228,219 @@
         </div>
 
         <div class="containerPlayerRating">
-          <h2>Juliana Freitas (São Paulo)</h2>
+          <div class="containerPlayerRating__list">
+            <div class="containerPlayerRating__item">
+              <div class="containerPlayerRating__title">
+                <img src="./src/assets/containerInfo/aspas.svg" alt="aspas" />
+                <h2>
+                  Juliana Freitas <br />
+                  (São Paulo)
+                </h2>
+                <div class="containerUserRating__star">
+                  <img
+                    src="./src/assets/containerInfo/star.svg"
+                    alt="avaliação image"
+                  />
+                  <img
+                    src="./src/assets/containerInfo/star.svg"
+                    alt="avaliação image"
+                  />
+                  <img
+                    src="./src/assets/containerInfo/star.svg"
+                    alt="avaliação image"
+                  />
+                  <img
+                    src="./src/assets/containerInfo/star.svg"
+                    alt="avaliação image"
+                  />
+                  <img
+                    src="./src/assets/containerInfo/star.svg"
+                    alt="avaliação image"
+                  />
+                </div>
+              </div>
 
-          <div
-            id="vid_637e7b8106deba000b06490d"
-            style="position: relative; width: 100%; padding: 56.25% 0 0"
-          >
-            <img
-              id="thumb_637e7b8106deba000b06490d"
-              src="https://images.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637e7b8106deba000b06490d/thumbnail.jpg"
-              style="
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                display: block;
-              "
-            />
-            <div
-              id="backdrop_637e7b8106deba000b06490d"
-              style="
-                position: absolute;
-                top: 0;
-                width: 100%;
-                height: 100%;
-                -webkit-backdrop-filter: blur(5px);
-                backdrop-filter: blur(5px);
-              "
-            ></div>
+              <div
+                id="vid_637e7b8106deba000b06490d"
+                style="position: relative; width: 100%; padding: 56.25% 0 0"
+              >
+                <img
+                  id="thumb_637e7b8106deba000b06490d"
+                  src="https://images.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637e7b8106deba000b06490d/thumbnail.jpg"
+                  style="
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    display: block;
+                  "
+                />
+                <div
+                  id="backdrop_637e7b8106deba000b06490d"
+                  style="
+                    position: absolute;
+                    top: 0;
+                    width: 100%;
+                    height: 100%;
+                    -webkit-backdrop-filter: blur(5px);
+                    backdrop-filter: blur(5px);
+                  "
+                ></div>
+              </div>
+              <script type="text/javascript" id="scr_637e7b8106deba000b06490d">
+                var s = document.createElement("script");
+                (s.src =
+                  "https://scripts.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637e7b8106deba000b06490d/player.js"),
+                  (s.async = !0),
+                  document.head.appendChild(s);
+              </script>
+            </div>
+
+            <div class="containerPlayerRating__item">
+              <div class="containerPlayerRating__title">
+                <img src="./src/assets/containerInfo/aspas.svg" alt="aspas" />
+                <h2>
+                  João Paulo <br />
+                  (Rio Grande do Sul)
+                </h2>
+                <div class="containerUserRating__star">
+                  <img
+                    src="./src/assets/containerInfo/star.svg"
+                    alt="avaliação image"
+                  />
+                  <img
+                    src="./src/assets/containerInfo/star.svg"
+                    alt="avaliação image"
+                  />
+                  <img
+                    src="./src/assets/containerInfo/star.svg"
+                    alt="avaliação image"
+                  />
+                  <img
+                    src="./src/assets/containerInfo/star.svg"
+                    alt="avaliação image"
+                  />
+                  <img
+                    src="./src/assets/containerInfo/star.svg"
+                    alt="avaliação image"
+                  />
+                </div>
+              </div>
+              <div
+                id="vid_637e7b7906deba000b064909"
+                style="position: relative; width: 100%; padding: 56.25% 0 0"
+              >
+                <img
+                  id="thumb_637e7b7906deba000b064909"
+                  src="https://images.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637e7b7906deba000b064909/thumbnail.jpg"
+                  style="
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    display: block;
+                  "
+                />
+                <div
+                  id="backdrop_637e7b7906deba000b064909"
+                  style="
+                    position: absolute;
+                    top: 0;
+                    width: 100%;
+                    height: 100%;
+                    -webkit-backdrop-filter: blur(5px);
+                    backdrop-filter: blur(5px);
+                  "
+                ></div>
+              </div>
+              <script type="text/javascript" id="scr_637e7b7906deba000b064909">
+                var s = document.createElement("script");
+                (s.src =
+                  "https://scripts.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637e7b7906deba000b064909/player.js"),
+                  (s.async = !0),
+                  document.head.appendChild(s);
+              </script>
+            </div>
+
+            <div class="containerPlayerRating__item">
+              <div class="containerPlayerRating__title">
+                <img src="./src/assets/containerInfo/aspas.svg" alt="aspas" />
+                <h2>
+                  Brenda Assis <br />
+                  (Minas Gerais)
+                </h2>
+                <div class="containerUserRating__star">
+                  <img
+                    src="./src/assets/containerInfo/star.svg"
+                    alt="avaliação image"
+                  />
+                  <img
+                    src="./src/assets/containerInfo/star.svg"
+                    alt="avaliação image"
+                  />
+                  <img
+                    src="./src/assets/containerInfo/star.svg"
+                    alt="avaliação image"
+                  />
+                  <img
+                    src="./src/assets/containerInfo/star.svg"
+                    alt="avaliação image"
+                  />
+                  <img
+                    src="./src/assets/containerInfo/star.svg"
+                    alt="avaliação image"
+                  />
+                </div>
+              </div>
+
+              <div
+                id="vid_637e7b7df28d2a000abd5c04"
+                style="
+                  position: relative;
+                  width: 100%;
+                  height: 30%;
+                  padding: 141.66666666666669% 0 0;
+                "
+              >
+                <img
+                  id="thumb_637e7b7df28d2a000abd5c04"
+                  src="https://images.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637e7b7df28d2a000abd5c04/thumbnail.jpg"
+                  style="
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 30%;
+                    object-fit: cover;
+                    display: block;
+                  "
+                />
+                <div
+                  id="backdrop_637e7b7df28d2a000abd5c04"
+                  style="
+                    position: absolute;
+                    top: 0;
+                    width: 100%;
+                    height: 30%;
+                    -webkit-backdrop-filter: blur(5px);
+                    backdrop-filter: blur(5px);
+                  "
+                ></div>
+              </div>
+              <script type="text/javascript" id="scr_637e7b7df28d2a000abd5c04">
+                var s = document.createElement("script");
+                (s.src =
+                  "https://scripts.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637e7b7df28d2a000abd5c04/player.js"),
+                  (s.async = !0),
+                  document.head.appendChild(s);
+              </script>
+            </div>
           </div>
-          <script type="text/javascript" id="scr_637e7b8106deba000b06490d">
-            var s = document.createElement("script");
-            (s.src =
-              "https://scripts.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637e7b8106deba000b06490d/player.js"),
-              (s.async = !0),
-              document.head.appendChild(s);
-          </script>
         </div>
-
-        <div class="containerPlayerRating">
-          <h2>João Paulo (Rio Grande do Sul)</h2>
-
-          <div
-            id="vid_637e7b7906deba000b064909"
-            style="position: relative; width: 100%; padding: 56.25% 0 0"
-          >
-            <img
-              id="thumb_637e7b7906deba000b064909"
-              src="https://images.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637e7b7906deba000b064909/thumbnail.jpg"
-              style="
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                display: block;
-              "
-            />
-            <div
-              id="backdrop_637e7b7906deba000b064909"
-              style="
-                position: absolute;
-                top: 0;
-                width: 100%;
-                height: 100%;
-                -webkit-backdrop-filter: blur(5px);
-                backdrop-filter: blur(5px);
-              "
-            ></div>
-          </div>
-          <script type="text/javascript" id="scr_637e7b7906deba000b064909">
-            var s = document.createElement("script");
-            (s.src =
-              "https://scripts.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637e7b7906deba000b064909/player.js"),
-              (s.async = !0),
-              document.head.appendChild(s);
-          </script>
-        </div>
-
-        <div class="containerPlayerRating">
-          <h2>Brenda Assis (Minas Gerais)</h2>
-
-          <div
-            id="vid_637e7b7df28d2a000abd5c04"
-            style="
-              position: relative;
-              width: 100%;
-              height: 100%;
-              padding: 141.66666666666669% 0 0;
-            "
-          >
-            <img
-              id="thumb_637e7b7df28d2a000abd5c04"
-              src="https://images.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637e7b7df28d2a000abd5c04/thumbnail.jpg"
-              style="
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                display: block;
-              "
-            />
-            <div
-              id="backdrop_637e7b7df28d2a000abd5c04"
-              style="
-                position: absolute;
-                top: 0;
-                width: 100%;
-                height: 100%;
-                -webkit-backdrop-filter: blur(5px);
-                backdrop-filter: blur(5px);
-              "
-            ></div>
-          </div>
-          <script type="text/javascript" id="scr_637e7b7df28d2a000abd5c04">
-            var s = document.createElement("script");
-            (s.src =
-              "https://scripts.converteai.net/515c862d-d746-4aca-9c18-44a8eb49d40b/players/637e7b7df28d2a000abd5c04/player.js"),
-              (s.async = !0),
-              document.head.appendChild(s);
-          </script>
-        </div>
-
         <div class="containerFaq" id="duvidas">
           <h2>FAQ</h2>
         </div>
@@ -2416,8 +2529,6 @@
       <a id="toast-name" class="toast-texts" href="#planos"></a>
       <a id="toast-plan" class="toast-texts" href="#planos"></a>
       <button id="toast-close">X</button>
-      <br />
-      <a class="toast-texts toast-text-bold" href="#planos">Adquira já!</a>
     </div>
 
     <script src="./src/scripts/index.js"></script>
